@@ -3,6 +3,7 @@
 == Changelog ==
 
 = trunk =
+* Add Travis CI with PHP Code Sniffer
 * BUGFIX DOM Element error on last testimonial rotation
 * BUGFIX Testimonials Widget edit page doesn't display custom taxonomies
 * Coding standards updates
